# galaxy_brain

./: .env.example  .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  local.yml  production.yml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py
galaxy_brain/templates/: base.html
galaxy_brain/users/: admin.py  apps.py  models.py  urls.py
galaxy_brain/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt  production.txt
